Estructura de servicio implementada

--- a/MercadoPagoCrossPlatform/MercadoPagoCrossPlatform/MainPage.xaml
+++ b/MercadoPagoCrossPlatform/MercadoPagoCrossPlatform/MainPage.xaml
@@ -5,10 +5,7 @@
              x:Class="MercadoPagoCrossPlatform.MainPage">
 
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <Button Text="Start Payment" Clicked="Button_Clicked"/>
     </StackLayout>
 
 </ContentPage>
